# django-requests-api

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: changelog.yaml  ci.yaml  ci.yml  docs.yaml  pr-approve.yaml  pr-rebase-on-labeled.yaml  pr-rebase-on-push.yaml  pr-recap.yaml  update-used-in.yaml  upgrade-dependency.yaml
community/contributing/: index.html
community/http-status-codes/: index.html
community/references/: index.html
docs/: index.md
docs/community/: contributing.md  http-status-codes.md  references.md
docs/tutorial/: configuration.md  example.md
requirements/: docs.txt  py310-dev.txt  py310-django32.txt  py310-django42.txt  py310-django52.txt  py311-dev.txt  py311-django32.txt  py311-django42.txt  py311-django52.txt  py312-django32.txt  py312-django42.txt  py312-django52.txt  py313-django52.txt  py314-django52.txt  py38-dev.txt  py38-django32.txt  py38-django42.txt  py39-dev.txt  py39-django32.txt  py39-django42.txt  requirements.in
search/: search_index.json
src/requests_api/: __init__.py  apps.py  conf.py  defaults.py  helpers.py  requests_api.py
tests/: settings.py  test_conf.py  test_helpers.py  test_requests_api.py  test_requests_api_method.py  urls.py  views.py
tutorial/configuration/: index.html
tutorial/example/: index.html
