[build-system]
requires = [
  "setuptools >= 77",
  "wheel",
]
build-backend = "setuptools.build_meta"
[project]
name = "django-requests-api"
description = "Django application providing a thin requests.Session wrapper with a base URL and small HTTP helpers."
authors = [
    { name = "DLRSP", email = "dlrsp.dev@gmail.com" },
]
requires-python = ">=3.9"
dynamic = [
    "version",
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
keywords = [
    "django",
    "requests",
    "http",
    "api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "Django>=3.2",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/DLRSP/django-requests-api"

[project.optional-dependencies]
testing = [
    "coverage",
    "codecov",
]
linting = [
    "flake8",
    "Flake8-pyproject",
    "pylint",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic.version]
attr = "requests_api.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.distutils.bdist_wheel]
universal = false

[tool.black]
line-length = 80
target-version = ['py311']
[tool.isort]
profile = "black"

[tool.check-manifest]
ignore = [
    "AGENTS.md",
    "docs/community/third-party-packages.md",
    "docs/tutorial/customize.md",
]
["AGENTS.md"]

# Read by flake8 when flake8-pyproject is installed (extra `linting`).
[tool.flake8]
max-line-length = 80
select = ["E", "F", "W", "B", "B950", "C", "I", "TYP"]
ignore = ["E203", "E501", "W503", "B950"]
per-file-ignores = [
    "**/migrations/*:B950",
]
[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
overrides = [
    { module = "tests.*", allow_untyped_defs = true },
]

[tool.pytest.ini_options]
addopts = "--strict-config\n    --strict-markers\n    --ds=tests.settings\n    "
django_find_project = false

[tool.coverage.paths]
source = [
    "src",
    ".tox/*/site-packages",
]

[tool.coverage.run]
branch = true
source = [
    "requests_api",
]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "requests_api"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "news/"
issue_format = "`#{issue} <https://github.com/DLRSP/django-requests-api/issues/{issue}>`_"
type = [
    { name = "Process", directory = "process", showcontent = true },
    { name = "Deprecations and Removals", directory = "removal", showcontent = true },
    { name = "Features", directory = "feature", showcontent = true },
    { name = "Bug Fixes", directory = "bugfix", showcontent = true },
    { name = "Vendored Libraries", directory = "vendor", showcontent = true },
    { name = "Improved Documentation", directory = "doc", showcontent = true },
    { name = "Trivial Changes", directory = "trivial", showcontent = false },
]

[tool.bumpversion]
current_version = "0.6.4"
allow_dirty = true
files = [
    { filename = "./src/requests_api/__init__.py" },
]
